# mkfm

./: .gitignore  Cargo.toml  Cross.toml  test.sh
.github/workflows/: build.yml  release.yml
examples/themes/: catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox-dark.toml  monokai.toml  nord.toml  one-dark.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
src/: actions.rs  app_render.rs  cli.rs  config.rs  event_loop.rs  features.rs  ffmpeg.rs  filesystem.rs  input.rs  jobs.rs  main.rs  navigation.rs  preview.rs  preview_state.rs  render.rs
src/app/: bulk_rename.rs  commands.rs  execute.rs  features_init.rs  mod.rs  pointer.rs  pointer_helpers.rs
src/app/handlers/: bookmarks.rs  file_ops.rs  fold.rs  mod.rs  mode.rs  navigation.rs  search.rs  search_match.rs  split.rs  task.rs  toggle.rs
src/config/: colors.rs  mod.rs  openers.rs  overlay.rs  saved.rs  theme.rs
src/filesystem/: archive.rs  mod.rs  ops.rs  utils.rs
src/filesystem/archive/: extract.rs  list.rs  mod.rs
src/navigation/: browser.rs  clipboard.rs  mod.rs  selection.rs
src/navigation/browser/: archive.rs  expansion.rs  expansion_helpers.rs  filter_search.rs  mod.rs  sorting.rs
src/preview/: cache.rs  loaders.rs  mod.rs  render.rs
src/render/: browser.rs  features.rs  mod.rs  primitives.rs  status.rs  tasks.rs
